--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="vow-content">
                 <img src="assets/vow-1.jpg" alt="Promise 1" class="vow-img">
                 <h3 class="vow-title">The Promise of Support</h3>
-                <p class="vow-text">"मैं वादा करता हूँ कि चाहे सुख हो या दुख, मैं हमेशा तुम्हारी ढाल बनकर खड़ा रहूँगा।"</p>
+                <p class="vow-text">"मैं वादा करता हूँ कि चाहे सुख हो या दुख, मैं हमेशा आपकी ढाल बनकर खड़ा रहूँगा।"</p>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
             <div class="vow-content">
                 <img src="assets/vow-2.jpg" alt="Promise 2" class="vow-img">
                 <h3 class="vow-title">The Promise of Respect</h3>
-                <p class="vow-text">"तुम सिर्फ मेरी पत्नी नहीं, मेरी देवी जी हो। मैं ताउम्र तुम्हारे सपनों का पूरा सम्मान करूँगा।"</p>
+                <p class="vow-text">"आप सिर्फ मेरी पत्नी नहीं, मेरी देवी जी हो। मैं ताउम्र आपके सपनों का पूरा सम्मान करूँगा।"</p>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="vow-content">
                 <img src="assets/vow-3.jpg" alt="Promise 3" class="vow-img">
                 <h3 class="vow-title">The Promise of Purity</h3>
-                <p class="vow-text">"मेरा मन, वचन और कर्म सिर्फ तुम्हारे लिए समर्पित रहेंगे। हमारा प्यार हमेशा पवित्र रहेगा।"</p>
+                <p class="vow-text">"मेरा मन, वचन और कर्म सिर्फ आपके लिए समर्पित रहेंगे। हमारा प्यार हमेशा पवित्र रहेगा।"</p>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
             <div class="vow-content">
                 <img src="assets/vow-4.jpg" alt="Promise 4" class="vow-img">
                 <h3 class="vow-title">The Promise of Smiles</h3>
-                <p class="vow-text">"तुम्हारे इस प्यारे चेहरे पर कभी उदासी नहीं आने दूँगा। तुम्हारी स्माइल मेरी ज़िम्मेदारी है।"</p>
+                <p class="vow-text">"आपके इस प्यारे चेहरे पर कभी उदासी नहीं आने दुंगा | आपकी स्माइल मेरी ज़िम्मेदारी है।"</p>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
             <div class="vow-content">
                 <img src="assets/vow-5.jpg" alt="Promise 5" class="vow-img">
                 <h3 class="vow-title">The Promise of Care</h3>
-                <p class="vow-text">"बीमारी हो या परेशानी, मैं एक साये की तरह तुम्हारी देखभाल करूँगा। तुम मेरी दुनिया हो।"</p>
+                <p class="vow-text">"बीमारी हो या परेशानी, मैं एक साये की तरह आपकी देखभाल करूँगा। आप मेरी दुनिया हो।"</p>
             </div>
         </div>
 
@@ -80,7 +80,7 @@
             <div class="vow-content">
                 <img src="assets/vow-7.jpg" alt="Promise 7" class="vow-img">
                 <h3 class="vow-title">The Eternal Bond</h3>
-                <p class="vow-text">"जैसे शिव जी और पार्वती माता का बंधन है, वैसे ही मैं हर जन्म में सिर्फ तुम्हारा ही होने का वचन देता हूँ।"</p>
+                <p class="vow-text">"जैसे शिव जी और पार्वती माता का बंधन है, वैसे ही मैं हर जन्म में सिर्फ आपका ही होने का वचन देता हूँ।"</p>
             </div>
         </div>
 
